Simple changes to test publishing of extention.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "converttoascii",
+	"publisher": "BitBelt",
 	"displayName": "Convert To ASCII",
 	"description": "Convert To ASCII extension.",
 	"version": "0.0.1",
